@@ -588,6 +588,21 @@
 #
 ##########################################################################################################
 #
+## IPMI_System_Event_Transition_Severity
+#
+# IPMI_System_Event_Transition_Severity_No_Event                                         Nominal
+# IPMI_System_Event_Transition_Severity_Transition_To_OK                                 Nominal
+# IPMI_System_Event_Transition_Severity_Transition_To_Non_Critical_From_OK               Warning
+# IPMI_System_Event_Transition_Severity_Transition_To_Critical_From_Less_Severe          Critical
+# IPMI_System_Event_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe   Critical
+# IPMI_System_Event_Transition_Severity_Transition_To_Non_Critical_From_More_Severe      Warning
+# IPMI_System_Event_Transition_Severity_Transition_To_Critical_From_Non_Recoverable      Critical
+# IPMI_System_Event_Transition_Severity_Transition_To_Non_Recoverable                    Critical
+# IPMI_System_Event_Transition_Severity_Monitor                                          Warning
+# IPMI_System_Event_Transition_Severity_Informational                                    Nominal
+#
+##########################################################################################################
+#
 ## IPMI_Critical_Interrupt
 #
 # IPMI_Critical_Interrupt_No_Event                             Nominal
